# Alpha_Human_gym

./: .gitignore  README.md  global_config.py
algorithm/: __init__.py  np3o.py
configs/: __init__.py  base_config.py  h1_constraint_him_trot.py  legged_robot_config.py
envs/: __init__.py  base_task.py  humanoid_utils.py  legged_robot.py  vec_env.py
hardware/nvidia_nano/sim2real/: CMakeLists.txt
hardware/nvidia_nano/sim2real/include/: sim2real_h1.h
hardware/nvidia_nano/sim2real/model/: trot.pt  trot_jitt.pt
hardware/nvidia_nano/sim2real/src/: sim2real_h1.cpp
hardware/odroid/: rc.local
hardware/odroid/H1/: control_task_h1  control_task_h1_12dof  hardware_task_h1  navigation_task_h1
hardware/stm32/: h1.hex
hardware/structure/3D_print/: 前盖支持.STEP  后盖保护壳.STEP  大腿结构DC.STEP  天线1 DC.STEP  天线1.STEP  头盖小.STEP  小腿结构DC.STEP  开关固定.STEP  电池支架.STEP  脖子2.STEP  脖子固定.STEP  脖子支架.STEP  足端4 包胶 -长.STEP  足端7.STEP  路由器支撑.STEP
hardware/structure/carbon_fiber/: 大腿2个.STEP  小腿 2个.STEP  机体2.STEP  踝关节碳板2个.STEP
hardware/structure/切割/: 主控支撑.STEP  大腿侧展 2个.STEP  机体1.STEP  机体支架 2个 左右切去0.5.STEP  机体支架1  2个  左右切去0.5.STEP
modules/: __init__.py  actor_critic.py  common_modules.py  depth_backbone.py  estimator.py  transformer_modules.py
runner/: __init__.py  on_constraint_policy_runner.py  rollout_storage.py
scripts/: play.py  sim2sim.py  train.py
scripts/model/: trot.pt  trot_jitt.pt
sim2real/: CMakeLists.txt
sim2real/include/: sim2real_h1.h
sim2real/src/: sim2real_h1.cpp
utils/: __init__.py  helpers.py  logger.py  math.py  ploter.py  task_registry.py  terrain.py  utils.py
(+37 files in other folders)
